# mcp-server-milvus

./: Dockerfile  OWNERS  README.md  docker-compose.yml  gemini-extension.json  pyproject.toml  requirements.txt  sse_server.py
.cursor/: mcp.json
.github/: mergify.yml
.github/workflows/: auto-assign.yml  pr-commands.yml  pr-merge-gate.yml  slash-commands.yml  stale.yml
docker/: Dockerfile
src 2/mcp_server_milvus/: __init__.py  blogpost.md  example.env  server.py
src/mcp_server_milvus/: __init__.py  server.py
